--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/TaskApprovalSetting/CreateEditTaskApprovalSetting.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/TaskApprovalSetting/CreateEditTaskApprovalSetting.cshtml
@@ -22,13 +22,20 @@
                         </div>  <!--end row-->
                     </div>
                     <div class="card-body">
-                        @using (Html.BeginForm(actionName, controllerName, FormMethod.Post, new { id = "frmTaskApprovalSetting" }))
+                        @using (Html.BeginForm("AddUpdateTaskApprovalSetting", controllerName, FormMethod.Post, new { id = "frmTaskApprovalSetting" }))
                         {
-                            @Html.HiddenFor(m => m.TaskApprovalSettingId)
                             @Html.HiddenFor(m => m.TaskMasterId)
                             @Html.HiddenFor(m => m.CentreCode)
                             @Html.HiddenFor(m => m.EmployeeIds, new { id = "EmployeeIds" })
                             <div class="row">
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.CentreCode, new { @class = "form-label" })
+                                        @Html.TextBoxFor(x => x.CentreName, new { @class = "form-control", @disabled = "disabled" })
+                                        @Html.ValidationMessageFor(x => x.CentreCode)
+                                    </div>
+                                </div>
+
                                 <div class="col-lg-2">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.TaskCode, new { @class = "form-label" })
@@ -42,14 +49,6 @@
                                         @Html.TextBoxFor(x => x.TaskDescription, new { @class = "form-control", @disabled = "disabled" })
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.CentreCode, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.CentreName, new { @class = "form-control", @disabled = "disabled" })
-                                        @Html.ValidationMessageFor(x => x.CentreCode)
-                                    </div>
-                                </div>
-
                                 <div class="col-lg-2">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.CountNumber, new { @class = "form-label required" })
@@ -72,40 +71,7 @@
                                     <a href="../@controllerName/Cancel?SelectedCentreCode=@Model.CentreCode" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
                                 </div>
                             </div>
-                        }
-                       @*  @if (Model.TaskApprovalSettingId > 0)
-                        {
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <div class="mb-3">
-                                        <table class="table table-bordered table-sm" id="makeEditable">
-                                            <thead>
-                                                <tr>
-                                                    <th>Employee Name</th>
-                                                    <th>Is Final Approval</th>
-                                                    <th class="text-center">Action</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                @if (Model?.EmployeeList?.Count > 0)
-                                                {
-                                                    foreach (var item in Model?.EmployeeList)
-                                                    {
-                                                        <tr>
-                                                            <td>@item.FirstName @item.LastName</td>
-                                                            <td> @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", @item.IsFinalApproval)</td>
-                                                            <td class="text-center">
-                                                                <a href="../@controllerName/Delete" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
-                                                            </td>
-                                                        </tr>
-                                                    }
-                                                }
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                </div>
-                            </div>
-                        } *@
+                        }                      
                     </div>
                 </div>
             </div>
