--- a/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMActivities/DBTMActivitiesDetails_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMActivities/DBTMActivitiesDetails_List.cshtml
@@ -11,11 +11,11 @@
     @Html.Partial("~/Views/Shared/Datatable/_DatatableSearchData.cshtml", Model.PageListViewModel.SearchBy)
 </div>
 
-
 <div class="row">
     <div class="col-sm-12 table-responsive">
         <table id="datatable" class="action-set table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
             @Html.Partial("~/Views/Shared/Datatable/_DatatableColumns.cshtml", Model.PageListViewModel)
+             @Html.HiddenFor(x => x.SelectedParameter1) 
             <tbody>
                 @if (Model?.ActivitiesDetailsList?.Count > 0)
                 {
@@ -27,27 +27,22 @@
                                 if (item1 == "Time")
                                 {
                                     <td>@item.Time</td>
-                                    break;
                                 }
                                 else if (item1 == "Distance")
                                 {
                                     <td>@item.Distance</td>
-                                    break;
                                 }
                                 else if (item1 == "Force")
                                 {
                                     <td>@item.Force</td>
-                                    break;
                                 }
                                 else if (item1 == "Acceleration")
                                 {
                                     <td>@item.Acceleration</td>
-                                    break;
                                 }
                                 else if (item1 == "Angle")
                                 {
                                     <td>@item.Angle</td>
-                                    break;
                                 }
                             }
                         </tr>
