--- a/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMActivities/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMActivities/List.cshtml
@@ -12,10 +12,9 @@
                 <div class="card">
                     <div class="card-header">
                         <span class="card-title">Activities List : @Model.FirstName @Model.LastName</span>
-                            <a class=" btn btn-sm btn-soft-secondary float-end" href="/dashboard/index" role="button">
+                        <a class=" btn btn-sm btn-soft-secondary float-end" href="/DBTMTraineeDetails/List?SelectedParameter1=@Model.CentreCode" role="button">
                                 <i class="fas fa-arrow-left me-2"></i>Back
                             </a>
-                        
                     </div>
                     <div class="card-body">
                         <div id="DataTablesDivId" class="dataTables_wrapper dt-bootstrap5 no-footer">
