--- a/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMActivities/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMActivities/_List.cshtml
@@ -11,11 +11,11 @@
     @Html.Partial("~/Views/Shared/Datatable/_DatatableSearchData.cshtml", Model.PageListViewModel.SearchBy)
 </div>
 
-
 <div class="row">
     <div class="col-sm-12 table-responsive">
         <table id="datatable" class="action-set table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
             @Html.Partial("~/Views/Shared/Datatable/_DatatableColumns.cshtml", Model.PageListViewModel)
+            @Html.HiddenFor(x => x.SelectedParameter1)
             <tbody>
                 @if (Model?.ActivitiesList?.Count > 0)
                 {
@@ -35,4 +35,3 @@
         </table>
     </div>
 </div>
-
