--- a/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMDeviceRegistrationDetails/AddNewDevice.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMDeviceRegistrationDetails/AddNewDevice.cshtml
@@ -28,7 +28,7 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.DeviceSerialCode, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.DeviceSerialCode, new { @class = "form-control" })
+                                        @Html.TextBoxFor(x => x.DeviceSerialCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
                                         @Html.ValidationMessageFor(x => x.DeviceSerialCode)
                                     </div>
                                 </div>
