--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/TaskApprovalSetting/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/TaskApprovalSetting/_List.cshtml
@@ -26,7 +26,7 @@
                             <td class="text-center data-action">
                                 @if (item.IsAssociated)
                                 {
-                                    <a href="../@controllerName/UpdateTaskApprovalSetting?taskMasterId=@item.TaskMasterId&centreCode=@Model.SelectedCentreCode" title="UpdateTaskApprovalSetting" class="btn btn-sm btn-soft-success btn-circle">
+                                    <a href="../@controllerName/UpdateTaskApprovalSetting?taskMasterId=@item.TaskMasterId&centreCode=@Model.SelectedCentreCode&taskApprovalSettingId=@item.TaskApprovalSettingId" title="UpdateTaskApprovalSetting" class="btn btn-sm btn-soft-success btn-circle">
                                         <i class="fas fa-edit"></i>
                                     </a>
                                 }
