--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupGL/_CreateAccountSetupGL.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupGL/_CreateAccountSetupGL.cshtml
@@ -13,5 +13,7 @@
     @Html.HiddenFor(m => m.AccSetupChartOfAccountTemplateId)
     @Html.HiddenFor(m => m.AccSetupBalanceSheetTypeId)
     @Html.HiddenFor(m => m.SelectedCentreCode)
+    @Html.HiddenFor(m => m.ParentAccSetupGLId)
+    @Html.HiddenFor(m => m.AccSetupGLId)
     <button type="submit" class="btn btn-success" style="margin-top: 20px;">@AdminResources.LabelSave</button>
 }
