--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupGL/_UpdateAccountSetupGL.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupGL/_UpdateAccountSetupGL.cshtml
@@ -5,7 +5,7 @@
     string actionName = ViewContext.RouteData.Values["action"].ToString();
 }
 
-<!-- Page Content-->
+@* <!-- Page Content--> *@
 @Html.Partial("~/Views/Accounts/AccSetupGL/_AccSetupGLTree.cshtml", Model)
 
 @using (Html.BeginForm("UpdateAccountSetupGL", controllerName, FormMethod.Post))
@@ -14,5 +14,7 @@
     @Html.HiddenFor(m => m.AccSetupBalanceSheetTypeId)
     @Html.HiddenFor(m => m.AccSetupBalancesheetId)
     @Html.HiddenFor(m => m.AccSetupChartOfAccountTemplateId)
+    @Html.HiddenFor(m => m.ParentAccSetupGLId)
+    @* <button type="submit" class="btn btn-success" style="margin-top: 20px;">@AdminResources.LabelSave</button> *@
 }
 
