--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralPolicyMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralPolicyMaster/CreateEdit.cshtml
@@ -33,7 +33,14 @@
                                 <div class="col-lg-3">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.PolicyCode, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.PolicyCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
+                                        @if (Model.GeneralPolicyMasterId > 0)
+                                        {
+                                            @Html.TextBoxFor(x => x.PolicyCode, new { @class = "form-control", @readonly = "readonly" })
+                                        }
+                                        else
+                                        {
+                                            @Html.TextBoxFor(x => x.PolicyCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
+                                        }
                                         @Html.ValidationMessageFor(x => x.PolicyCode)                                        
                                     </div>
                                 </div>
